--- a/.github/workflows/send_email.yml
+++ b/.github/workflows/send_email.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade setuptools wheel
 
       - name: Run email script
         run: |
